--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@media (max-width: 480px) {
+  .Toastify__toast {
+    width: 90% !important;
+    top: 1rem;
+    right: 1em;
+    font-size: 14px; 
+    box-shadow: 2px 2px 10px #ededec;
+    margin-bottom: 0.5rem;
+  }
+}
